--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -45,9 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterInterface.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="ClientType.cs" />
     <Compile Include="DroidType.cs" />
     <Compile Include="EpisodeEnum.cs" />
     <Compile Include="HumanType.cs" />
+    <Compile Include="Matter.cs" />
     <Compile Include="MatterType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StarWarsCharacter.cs" />
