--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -45,14 +45,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterInterface.cs" />
-    <Compile Include="Client.cs" />
-    <Compile Include="ClientType.cs" />
+    <Compile Include="Contact.cs" />
+    <Compile Include="ContactType.cs" />
+    <Compile Include="Droid.cs" />
     <Compile Include="DroidType.cs" />
     <Compile Include="EpisodeEnum.cs" />
+    <Compile Include="Human.cs" />
     <Compile Include="HumanType.cs" />
     <Compile Include="Matter.cs" />
     <Compile Include="MatterType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs" />
+    <Compile Include="RoleType.cs" />
     <Compile Include="StarWarsCharacter.cs" />
     <Compile Include="StarWarsData.cs" />
     <Compile Include="StarWarsQuery.cs" />
