--- a/src/GraphQL.GraphiQL/GraphQL.GraphiQL.csproj
+++ b/src/GraphQL.GraphiQL/GraphQL.GraphiQL.csproj
@@ -165,10 +165,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\GraphQLController.cs" />
+    <Compile Include="Controllers\GraphQLQuery.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ISimpleContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleContainer.cs" />
     <Compile Include="Startup.cs" />
