--- a/Domain/packages.config
+++ b/Domain/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net45" />
   <package id="GraphQL" version="0.6.5.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="Solicitors.Configuration" version="1.0.0.15" targetFramework="net45" />
   <package id="xunit" version="2.1.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
