--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -72,17 +72,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
-    <Compile Include="ClientDataSource.cs" />
-    <Compile Include="ClientType.cs" />
-    <Compile Include="Contact.cs" />
-    <Compile Include="ContactType.cs" />
-    <Compile Include="Debt.cs" />
-    <Compile Include="DebtDataSource.cs" />
-    <Compile Include="DebtType.cs" />
-    <Compile Include="Matter.cs" />
-    <Compile Include="MatterDataSource.cs" />
-    <Compile Include="MatterType.cs" />
+    <Compile Include="DTO\Client.cs" />
+    <Compile Include="DataAccess\ClientDataSource.cs" />
+    <Compile Include="GraphQLDTO\ClientType.cs" />
+    <Compile Include="DTO\Contact.cs" />
+    <Compile Include="GraphQLDTO\ContactType.cs" />
+    <Compile Include="DTO\Debt.cs" />
+    <Compile Include="DataAccess\DebtDataSource.cs" />
+    <Compile Include="GraphQLDTO\DebtType.cs" />
+    <Compile Include="DTO\Matter.cs" />
+    <Compile Include="DataAccess\MatterDataSource.cs" />
+    <Compile Include="GraphQLDTO\MatterType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ALBData.cs" />
     <Compile Include="ALBQuery.cs" />
@@ -90,6 +90,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Service\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
